# ebus

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  EbusHandlerFSM.txt  HandlerFSM.txt  Makefile.am  NEWS  README  README.md  configure.ac  ebus.pc.in  ebusfsm.pc.in  gemini.md  library.json
example/: Makefile.am  demo_ebusfsm.cpp
examples/: CMakeLists.txt  Makefile.am  demo_ebus.cpp  demo_ebusdata.cpp  demo_ebusdevice.cpp  demo_ebusfsm.cpp  demo_ebussequence.cpp  demo_telegram.cpp  example_vaillant_outdoor_temp.cpp  example_virtual_bus_readonly_client.cpp  example_virtual_bus_responder.cpp  multiple_controllers_on_virtual_bus.cpp
examples/FreeRTOS/: busisr.cpp  busisr.hpp
examples/ebusstack/demo/: CMakeLists.txt  demo_ebusstack.cpp
examples/ebusstack/src/: CMakeLists.txt  Device.cpp  Device.h  EbusStack.cpp  NQueue.h  Notify.h  runtime_warning.h
examples/playground/: CMakeLists.txt
examples/reader/: CMakeLists.txt  reader.cpp
examples/test/: CMakeLists.txt  test_datatypes.cpp  test_ebushandler.cpp  test_telegram.cpp
include/ebusfsm/: Device.h  EbusCommon.h  EbusDevice.h  EbusFSM.h  EbusMessage.h  EbusSequence.h  IEbusLogger.h  Makefile.am  Message.h  Sequence.h
include/ebusfsm/base/: Device.h  Makefile.am  Message.h  Sequence.h
include/ebusfsm/utils/: Color.h  Makefile.am  MovingAverage.h  NQueue.h  Notify.h
legacy/: CMakeLists.txt
legacy/App/: legacy_client.cpp  legacy_clientmanager.cpp  legacy_devicemanager.cpp  legacy_enhancedprotocol.cpp  legacy_pollmanager.cpp  legacy_scheduler.cpp
legacy/Core/: legacy_bushandler.cpp  legacy_handler.cpp  legacy_request.cpp  legacy_sequence.cpp  legacy_telegram.cpp
legacy/Models/: legacy_datatypes.cpp  legacy_device.cpp
legacy/Platform/: legacy_bus.cpp  legacy_queue.cpp  legacy_servicethread.cpp
legacy/Utils/: legacy_common.cpp  legacy_timingstats.cpp
legacy/app/: legacy_client.cpp  legacy_client_manager.cpp  legacy_controller.cpp  legacy_device_manager.cpp  legacy_device_scanner.cpp  legacy_enhanced_protocol.cpp  legacy_poll_manager.cpp  legacy_scheduler.cpp
legacy/core/: legacy_bus_handler.cpp  legacy_handler.cpp  legacy_request.cpp  legacy_sequence.cpp  legacy_telegram.cpp
legacy/models/: legacy_data_types.cpp  legacy_device.cpp
legacy/platform/: legacy_bus.cpp  legacy_queue.cpp  legacy_service_thread.cpp
legacy/utils/: legacy_common.cpp  legacy_timing_stats.cpp  legacy_utils.cpp
src/: Average.h  CMakeLists.txt  Connect.cpp  Connect.h  Datatypes.cpp  Datatypes.h  Device.cpp  Device.h  Ebus.cpp  Ebus.h  Ebus.hpp  EbusCommon.cpp  EbusDevice.cpp  EbusFSM.cpp  EbusFSM.h  EbusHandler.cpp  EbusHandler.h  EbusMessage.cpp  EbusSequence.cpp  EvalMessage.cpp  EvalMessage.h  FreeBus.cpp  FreeBus.h  Idle.cpp  Idle.h  Listen.cpp  Listen.h  LockBus.cpp  LockBus.h  Makefile.am  Message.cpp  Message.h  NQueue.h  NetworkDevice.cpp  NetworkDevice.h  Notify.h  OnError.cpp  OnError.h  RecvMessage.cpp  RecvMessage.h  (+15 more)
src/Ebus/: Bus.hpp  BusHandler.hpp  BusIsr.hpp  ByteHandler.hpp  CMakeLists.txt  Common.cpp  Common.hpp  Controller.cpp  Controller.hpp  Datatypes.cpp  Datatypes.hpp  Handler.cpp  Handler.hpp  Queue.hpp  Request.cpp  Request.hpp  Sequence.cpp  Sequence.hpp  ServiceRunner.hpp  Statistic.hpp  Telegram.cpp  Telegram.hpp  TimingStats.cpp  TimingStats.hpp
src/Ebus/App/: Client.cpp  Client.hpp  ClientManager.cpp  (+7 more)
src/ebus/: CMakeLists.txt
src/ebuscpp/: BaseLoop.cpp  BaseLoop.h  EbusLogger.cpp  EbusLogger.h  EbusProxy.cpp  Makefile.am  README
src/ebusgate/: BaseLoop.cpp  BaseLoop.h  EbusGate.cpp  Makefile.am
src/tools/: Makefile.am  README  ebusctl.cpp  ebusfeed.cpp  ebusgatectl.cpp  ebusgatefeed.cpp
test/: CMakeLists.txt  Makefile.am  test_handler.cpp  test_servicerunner.cpp  test_telegram  test_telegram.cpp
tests/: CMakeLists.txt  TestUtils.hpp  test_bus.cpp  test_bushandler.cpp  test_bytehandler.cpp  test_common.cpp  test_datatypes.cpp  test_handler.cpp  test_helpers.hpp  test_queue.cpp  test_request.cpp  test_sequence.cpp  test_servicerunner.cpp  test_telegram.cpp  test_utils.hpp
tests/App/: CMakeLists.txt  catch_client.cpp  catch_clientmanager.cpp  catch_controller.cpp  catch_devicemanager.cpp  catch_devicescanner.cpp  catch_enhancedprotocol.cpp  catch_pollmanager.cpp  catch_scheduler.cpp  test_client.cpp  test_clientmanager.cpp  test_controller.cpp  test_devicemanager.cpp  test_devicescanner.cpp
tests/Core/: catch_bushandler.cpp  catch_handler.cpp  catch_request.cpp  test_bushandler.cpp  test_handler.cpp
tests/Models/: CMakeLists.txt  catch_datatypes.cpp  catch_device.cpp
tests/Platform/: CMakeLists.txt  catch_bus.cpp  catch_queue.cpp  catch_servicethread.cpp  test_bus.cpp
tests/Utils/: CMakeLists.txt  catch_common.cpp  catch_timingstats.cpp
tests/app/: catch_client.cpp  catch_client_manager.cpp  catch_client_manager_mock.cpp  catch_config_validator.cpp  catch_controller.cpp  catch_device_manager.cpp  catch_device_scanner.cpp  catch_enhanced_protocol.cpp  catch_poll_manager.cpp  catch_scheduler.cpp  catch_virtual_bus.cpp  test_client.cpp  test_client_manager.cpp  test_client_manager_mock.cpp  test_config_validator.cpp  test_controller.cpp  test_device_manager.cpp  test_device_scanner.cpp  test_enhanced_protocol.cpp  test_poll_manager.cpp  test_scheduler.cpp  test_virtual_bus.cpp
tests/core/: catch_bus_handler.cpp  catch_handler.cpp  catch_request.cpp  catch_sequence.cpp  catch_telegram.cpp  catch_telemetry.cpp  test_bus_handler.cpp  test_handler.cpp  test_sequence.cpp  test_telegram.cpp
tests/models/: catch_data_types.cpp  catch_device.cpp  test_data_types.cpp  test_device.cpp
tests/platform/: catch_bus.cpp  catch_delegate.cpp  catch_queue.cpp  catch_service_thread.cpp  test_bus.cpp  test_queue.cpp
tests/utils/: catch_circular_buffer.cpp  catch_common.cpp  catch_json_utils.cpp  catch_json_writer.cpp  catch_logger.cpp  catch_timing_stats.cpp  catch_utils.cpp  test_delegate.cpp  test_format_float.cpp  test_json_utils.cpp
tools/: CMakeLists.txt  ebusproxy.cpp  ebusread.cpp  playground.cpp  test_datatypes.cpp  test_ebushandler.cpp  test_handler.cpp  test_telegram.cpp
(+495 files in other folders)
